--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <link href="/css/style.css" rel="1stylesheet">
+        <link href="/css/style.css" rel="stylesheet">
   <title>marlenvega</title>
   </head>
     <section id="column" class="myskills">
